fix home page overflow x on thin screen
- content had min-width of wider than small screens, so make max 100%

--- a/wp-content/themes/lax/style.css
+++ b/wp-content/themes/lax/style.css
@@ -166,7 +166,7 @@ button {
 }
 .with-mini-tables {
 	flex: 1;
-	min-width: 24rem;
+	min-width: min(24rem, 100%);
 }
 #sidebar-mini-tables {
 	flex: none;
